fixing: camera can switching to behind

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transform: scaleX(-1); /* Mirror effect */
+    /* transform: scaleX(-1); Mirror effect */
 }
 
 /* Tombol Shutter Besar */
